--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.8",
-    "@types/node": "^18.11.10",
+    "@types/node": "^20.9.0-ts5.2",
     "del-cli": "^5.1.0",
     "jest": "^29.7.0",
     "npm-run-all": "^4.1.5",
