--- a/package.json
+++ b/package.json
@@ -41,13 +41,13 @@
     }
   },
   "devDependencies": {
-    "@types/jest": "^29.5.8",
-    "@types/node": "^20.9.0-ts5.2",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.16.3",
     "del-cli": "^5.1.0",
     "jest": "^29.7.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.0.3",
-    "ts-jest": "^29.1.1",
-    "typescript": "^5.2.2"
+    "ts-jest": "^29.2.5",
+    "typescript": "^5.5.4"
   }
 }
