--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -8,17 +8,21 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14.x, 16.x, 18.x, 20.x]
+        node-version: [14.x, 16.x, 18.x, 20.x, 22.x]
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout Source Code
+        uses:
+          actions/checkout@v4
 
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
+        uses:
+          actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version:
+            ${{ matrix.node-version }}
 
-      - name: npm install, build, and test
+      - name: Perform npm install, build, and test
         run: |
           npm ci
           npm run build --if-present
