--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -22,11 +22,8 @@ jobs:
           node-version:
             ${{ matrix.node-version }}
 
-      - name: Perform npm install, build, and test
+      - name: Perform npm ci (includes format:check, build and test)
         run: |
           npm ci
-          npm run format:check
-          npm run build --if-present
-          npm test -- --color=true
         env:
           CI: true
