--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -12,15 +12,12 @@ jobs:
 
     steps:
       - name: Checkout Source Code
-        uses:
-          actions/checkout@v4
+        uses: actions/checkout@v4
 
       - name: Use Node.js ${{ matrix.node-version }}
-        uses:
-          actions/setup-node@v4
+        uses: actions/setup-node@v4
         with:
-          node-version:
-            ${{ matrix.node-version }}
+          node-version: ${{ matrix.node-version }}
 
       - name: Perform npm ci (includes format:check, build and test)
         run: |
