--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -12,20 +12,15 @@ jobs:
 
     steps:
       - name: Checkout Source Code
-        uses:
-          actions/checkout@v4
+        uses: actions/checkout@v4
 
       - name: Use Node.js ${{ matrix.node-version }}
-        uses:
-          actions/setup-node@v4
+        uses: actions/setup-node@v4
         with:
-          node-version:
-            ${{ matrix.node-version }}
+          node-version: ${{ matrix.node-version }}
 
-      - name: Perform npm install, build, and test
+      - name: Run npm cit (clean install, prpare (build) and test)
         run: |
-          npm ci
-          npm run build --if-present
-          npm test -- --color=true
+          npm cit
         env:
           CI: true
