--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "**/*.d.ts"
   ],
   "scripts": {
-    "build": "run-s format:check clean tsc",
+    "build": "run-s format:check eslint clean tsc",
     "clean": "del-cli '**/*.js' '**/*.d.ts' '!node_modules'",
+    "eslint": "eslint src",
     "format:check": "prettier --check $npm_package_config_pretty_files",
     "format:fix": "prettier --write $npm_package_config_pretty_files",
+    "lint": "npm run eslint",
     "prepare": "npm run build",
     "prepublishOnly": "npm test",
     "preversion": "run-s build test",
@@ -41,13 +43,17 @@
     }
   },
   "devDependencies": {
+    "@eslint/js": "^9.9.1",
+    "@types/eslint__js": "^8.42.3",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.16.3",
     "del-cli": "^5.1.0",
+    "eslint": "^9.9.1",
     "jest": "^29.7.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.3.3",
     "ts-jest": "^29.2.5",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^8.4.0"
   }
 }
