--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,18 @@
 {
-    "compilerOptions": {
-      "alwaysStrict": true,
-      "declaration": true,
-      "inlineSourceMap": true,
-      "module": "commonjs",
-      "noImplicitThis": true,
-      "preserveConstEnums": true,
-      "strictBindCallApply": true,
-      "strictNullChecks": true,
-      "strictFunctionTypes": true,
-      "strictPropertyInitialization": true,
-      "target": "es2018",
-      "outDir": "."
-    },
-    "include": [
-      "src/**/*"
-    ],
-    "exclude": ["node_modules"]
+  "compilerOptions": {
+    "alwaysStrict": true,
+    "declaration": true,
+    "inlineSourceMap": true,
+    "module": "commonjs",
+    "noImplicitThis": true,
+    "preserveConstEnums": true,
+    "strictBindCallApply": true,
+    "strictNullChecks": true,
+    "strictFunctionTypes": true,
+    "strictPropertyInitialization": true,
+    "target": "es2018",
+    "outDir": "."
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules"]
 }
