--- a/package.json
+++ b/package.json
@@ -41,9 +41,11 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@types/core-js": "^2.5.8",
     "@types/eslint__js": "^8.42.3",
     "@types/jest": "^29.5.12",
     "@types/node": "^22.5.3",
+    "core-js": "^3.38.1",
     "del-cli": "^5.1.0",
     "eslint": "^9.9.1",
     "jest": "^29.7.0",
