--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "files": [
     "**/*.js",
-    "**/*.d.ts"
+    "**/*.d.ts",
+    "!demos/**"
   ],
   "scripts": {
     "build": "run-s format:check eslint clean tsc",
