--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "core-js": "^3.38.1",
     "del-cli": "^5.1.0",
     "eslint": "^9.9.1",
+    "globals": "^15.9.0",
     "jest": "^29.7.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.3.3",
