--- a/package.json
+++ b/package.json
@@ -32,14 +32,6 @@
     "url": "https://github.com/nikolaybotev/streams/issues"
   },
   "homepage": "https://github.com/nikolaybotev/streams",
-  "jest": {
-    "rootDir": "./src",
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node",
-    "transform": {
-      "^.+\\.[jt]sx?$": "ts-jest"
-    }
-  },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
     "@types/core-js": "^2.5.8",
@@ -54,6 +46,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^3.3.3",
     "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
     "typescript-eslint": "^8.4.0"
   }
