Update TypeScript transpiling target from es2018 to  ES2023.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "strictNullChecks": true,
     "strictFunctionTypes": true,
     "strictPropertyInitialization": true,
-    "target": "es2018",
+    "target": "ES2023",
     "outDir": "."
   },
   "include": ["src/**/*"],
