New tsconfig options

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,10 @@
     "inlineSourceMap": true,
     "module": "NodeNext",
     "noImplicitThis": true,
+    "noUncheckedSideEffectImports": true,
     "preserveConstEnums": true,
     "strictBindCallApply": true,
+    "strictBuiltinIteratorReturn": true,
     "strictNullChecks": true,
     "strictFunctionTypes": true,
     "strictPropertyInitialization": true,
