--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "url": "https://github.com/nikolaybotev/streams/issues"
   },
   "homepage": "https://github.com/nikolaybotev/streams",
+  "peerDependencies": {
+    "typescript": ">=5.6.2"
+  },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
     "@types/core-js": "^2.5.8",
