--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,14 +3,16 @@
     "alwaysStrict": true,
     "declaration": true,
     "inlineSourceMap": true,
-    "module": "commonjs",
+    "module": "NodeNext",
     "noImplicitThis": true,
+    "noUncheckedSideEffectImports": true,
     "preserveConstEnums": true,
     "strictBindCallApply": true,
+    "strictBuiltinIteratorReturn": true,
     "strictNullChecks": true,
     "strictFunctionTypes": true,
     "strictPropertyInitialization": true,
-    "target": "ES2023",
+    "target": "ESNext",
     "outDir": "."
   },
   "include": ["src/**/*"],
